fix: header on mobile

--- a/style/responsive.css
+++ b/style/responsive.css
@@ -14,6 +14,10 @@
     justify-content: center;
     padding: 10px;
   }
+
+  .main-game {
+    height: 500px;
+  }
 }
 
 @media screen and (min-width: 1000px) {
